frontend/src/assets/styles/Layout/CarouselComponent.css
.carousel-item {
    width: 100%;
    height: 60vh;
}

.slide-content {
    position: relative;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
    box-sizing: border-box;
    padding: 50px;
}

.slide-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.text-container {
    position: absolute;
    width: fit-content;
}


.top-left {
    top: 15%;
    left: 10%;
    text-align: left;
}

.top-right {
    top: 15%;
    right: 10%;
    text-align: right;
}

.center-left {
    transform: translate(0, -50%);
    top: 50%;
    left: 10%;
    text-align: left;
}

.center-right {
    transform: translate(0, -50%);
    top: 50%;
    right: 10%;
    text-align: right;
}

.bottom-left {
    bottom: 5%;
    left: 15%;
    text-align: left;
}

.bottom-right {
    bottom: 5%;
    right: 10%;
    text-align: right;
}

.center {
    transform: translate(-50%, -50%);
    top: 50%;
    left: 50%;
    text-align: center;
}

.slide-icon {
    width: 25%;
    height: auto;
    position: absolute;
}

.slide-text {
    font-family: 'Inter';
    font-size: clamp(12px, 3.5vw, 50px);
    color: #FFF;
    font-weight: 600;
    width: max-content;
}

.carousel-control-prev, .carousel-control-next{
    width: 5%;
    min-width: 20px;
    margin: 0 3%;
}

@media (max-width: 992px) {
    .carousel-item {
        height: 50vh;
    }
}

@media (max-width: 668px) {
    .carousel-item {
        height: 45vh;
    }
    .carousel-control-prev, .carousel-control-next{
        display: none;
    }
}

@media (max-width: 480px) {
    .carousel-item {
        height: 30vh;
    }
}

@media (max-width: 320px) {
    .carousel-item {
        height: 20vh;
    }
}

